--- a/index.html
+++ b/index.html
@@ -103,10 +103,17 @@
 		<div class="container">
 	           <div class="row">
 
-	              <div class="col-md-3 text-center">
+                      <div class="col-md-3 text-center">
+                      </div>
+
+	              <div class="col-md-1 text-center">
+	                  <a href="https://github.com/ai-safety-limited/safe-av.org" class="btn-lg btn-social-icon btn-github">
+			       <span class="fa fa-github"></span>
+			  </a>
 		      </div>
 
-	              <div class="col-md-2 text-center">
+
+	              <div class="col-md-1 text-center">
 			   <a href="https://twitter.com/SafeAV" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @SafeAV</a>
 		      </div>
 
@@ -170,7 +177,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Trusted by businesses and individuals</h2>
-                    <h3 class="section-subheading text-muted">Our contributors are individuals who care about autonomous vehicles safety. And (hopefully) following (and not only following) major companies:</h3>
+                    <h3 class="section-subheading text-muted">Our contributors are individuals and companies who care about autonomous vehicles safety. Please feel free to contribute in any way possible - feedback, tweets, pull requests, donations. </h3>
                 </div>
             </div>
             <div class="row">
@@ -181,10 +188,10 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/portfolio/01-thumbnail.png" alt="">
+                        <img class="img-fluid" src="img/portfolio/01-thumbnail.png.NO" alt="">
                     </div>
                     <div class="portfolio-caption">
-                        <p class="text-muted">Ride Sharing</p>
+                        <p class="text-muted">Placeholder for top contributor</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -194,10 +201,10 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/portfolio/02-thumbnail.png" alt="">
+                        <img class="img-fluid" src="img/portfolio/02-thumbnail.png.NO" alt="">
                     </div>
                     <div class="portfolio-caption">
-                        <p class="text-muted">Automotive</p>
+                        <p class="text-muted">Placeholder for top2 contributor</p>
                     </div>
                 </div> 
 
@@ -209,10 +216,10 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/portfolio/03-thumbnail.png" alt="">
+                        <img class="img-fluid" src="img/portfolio/03-thumbnail.png.NO" alt="">
                     </div>
                     <div class="portfolio-caption">
-                        <p class="text-muted">Autonomous Taxi</p>
+                        <p class="text-muted">Placeholder for top3 contributor</p>
                     </div>
                 </div>
             </div>
@@ -237,12 +244,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/gallery/01-thumbnail.png" alt="">
+                        <img class="img-fluid" src="img/gallery/01-thumbnail.jpg" alt="">
                     </div>
                     <div class="portfolio-caption">
-                        <h4>Pedestrian crossing</h4>
-                        <p class="text-muted">This example is hard, because the monocular sensor image may look indistinguishable from a 3D object.
-			                      The severity of the example is relatively low, bacause at worst an autonomous vehicle will stop and block the traffic.</p>
+                        <h4>3D Illusuion</h4>
+                        <p class="text-muted">This has a potential of confusing an autonomous vehicle, because the monocular sensor image may look indistinguishable from a 3D object.  The severity is relatively low, bacause at worst an autonomous vehicle will stop and block the traffic.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -255,8 +261,8 @@
                         <img class="img-fluid" src="img/gallery/02-thumbnail.jpg" alt="">
                     </div>
                     <div class="portfolio-caption">
-                        <h4>An exotic animal crossing a road</h4>
-                        <p class="text-muted">This example is hard, because of the exotic shape of an animal. The severity of this example is low, because an animal is large and would be easily registered by multiple sensors of an autonomous vehicle.</p>
+                        <h4>An unusual pose of the vehicle</h4>
+                        <p class="text-muted">This might confuse an automonous vehicle, because of the unusual pose of the semi. The severity of this example is high, because a misinterpretation of the object has a potential of creating an accudent.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -269,8 +275,8 @@
                         <img class="img-fluid" src="img/gallery/06-thumbnail.jpg" alt="">
                     </div>
                     <div class="portfolio-caption">
-                        <h4>Lorem ipsum</h4>
-                        <p class="text-muted">Please tweet us @SafeAV to contribute yours!</p>
+                        <h4>Contribute yours!</h4>
+                        <p class="text-muted">Please tweet a description or an image @SafeAV to contribute yours!</p>
                     </div>
                 </div>
             </div>
