--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
     <header class="masthead">
         <div class="container">
             <div class="intro-text">
+		    
+		<!-- 
 		<div id="survey" class="intro-heading">Interested in Autonomous Vehicles Safety? Like to share your thoughts?</div>
 
                 <div class="intro-lead-in">
@@ -94,7 +96,20 @@
 		<div>
 		   <a href="https://twitter.com/SafeAV" class="btn btn-xl">Click to tweet your report @SafeAV</a> <br> <br>
 		</div>
+		-->
 
+		<div ng-app="intro-carousel" ng-controller="divdynamic">
+		  <div id="dynamiccontentcarousel" class="carousel slide" data-ride="carousel" data-interval="5000">
+		    <ol class="carousel-indicators">
+		      <li data-target="#dynamiccontentcarousel" data-ng-repeat="img in images" data-ng-class="{active : $first}" data-slide-to="{{$index}}"></li>
+		    </ol>
+		    <div class="carousel-inner" role="listbox">
+		      <div class="item" data-ng-repeat="image in images" data-ng-class="{active : $first}">
+		        <img data-ng-src="{{image}}" alt=" carousel {{$index}}" />
+		      </div>
+		    </div>
+		  </div>
+		</div>
 		
 		<div class="container">
 	           <div class="row">
@@ -544,15 +559,31 @@
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Contact form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
-
     <!-- Custom scripts for this template -->
     <script src="js/agency.min.js"></script>
 
     <!-- Twitter widgets -->
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="js/agency.min.js"></script>
+
+    <!-- Adding a carousel of hard example images -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>	
+    <script>
+	var app = angular.module('intro-carousel', []);
+	app.controller("divdynamic", function ($scope, $http) {
+    	var data = [
+            "img/gallery/11-thumbnail.jpg",
+            "img/gallery/12-thumbnail.jpg",
+            "img/gallery/13-thumbnail.jpg",
+            "img/gallery/14-thumbnail.jpg",
+            "img/gallery/15-thumbnail.jpg"
+        ];
+    
+	$scope.images=data;
+	});
+    </script>
 
 
 </body>
