--- a/index.html
+++ b/index.html
@@ -87,28 +87,32 @@
             <div class="intro-text">
 		    
 		<!-- 
-		<div id="survey" class="intro-heading">Interested in Autonomous Vehicles Safety? Like to share your thoughts?</div>
-
-                <div class="intro-lead-in">
-			If you see or imagine something that might confuse an Autonomous Vehicle - <strong>snap a picture or describe it!</strong>
-                </div>
-
-		<div>
-		   <a href="https://twitter.com/SafeAV" class="btn btn-xl">Click to tweet your report @SafeAV</a> <br> <br>
-		</div>
+		  <div id="survey" class="intro-heading">Interested in Autonomous Vehicles Safety? Like to share your thoughts?</div>
 		-->
 
+                <div class="intro-lead-in">
+			If you see or imagine something that might confuse an Autonomous Vehicle <strong><i class="fa fa-twitter" style="color:#00aced"></i> a photo or description <a href="https://twitter.com/SafeAV">@SafeAV</a>!</strong>
+                </div>
+
 		<div ng-app="intro-carousel" ng-controller="divdynamic">
-		  <div id="dynamiccontentcarousel" class="carousel slide" data-ride="carousel" data-interval="5000">
-		    <ol class="carousel-indicators">
-		      <li data-target="#dynamiccontentcarousel" data-ng-repeat="img in images" data-ng-class="{active : $first}" data-slide-to="{{$index}}"></li>
-		    </ol>
+		  <div id="dynamiccontentcarousel" class="carousel slide" data-ride="carousel" data-interval="7500">
 		    <div class="carousel-inner" role="listbox">
-		      <div class="item" data-ng-repeat="image in images" data-ng-class="{active : $first}">
-		        <img data-ng-src="{{image}}" alt=" carousel {{$index}}" />
+		      <div class="carousel-item" data-ng-repeat="x in items" data-ng-class="{active : $first}">
+		        <img data-ng-src="{{x.image}}" alt=" carousel {{$index}}" />
+
+		           <div class="carousel-caption d-none d-md-block">
+			      <h5>Test</h5>
+			        <p>test</p>
+		           </div>
 		      </div>
 		    </div>
 		  </div>
+
+		  <div>
+                     <a href="https://twitter.com/SafeAV" class="btn btn-xl">Click to tweet your report @SafeAV</a> <br> <br>
+                  </div>
+
+
 		</div>
 		
 		<div class="container">
@@ -573,15 +577,15 @@
     <script>
 	var app = angular.module('intro-carousel', []);
 	app.controller("divdynamic", function ($scope, $http) {
-    	var data = [
-            "img/gallery/11-thumbnail.jpg",
-            "img/gallery/12-thumbnail.jpg",
-            "img/gallery/13-thumbnail.jpg",
-            "img/gallery/14-thumbnail.jpg",
-            "img/gallery/15-thumbnail.jpg"
-        ];
-    
-	$scope.images=data;
+	  $http.get("img/gallery/source.csv", {responseType: 'text'}).success( function (csv) {
+	    var lines = csv.split(/\r\n|\n/);
+	    var items = []; //"img/gallery/11-thumbnail.jpg"];
+	    for ( var i = 0; i < lines.length; i++) {
+              var columns = lines[i].split(',');
+	      items.push({"image" : "img/gallery/" + columns[0] + "-thumbnail.jpg"});
+	    }
+	    $scope.$parent.items=items;
+	  });
 	});
     </script>
 
